--- a/nablaweb/templates/news/news_detail.html
+++ b/nablaweb/templates/news/news_detail.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<h2>{{ news.headline }}</h2>
+<!--<h2>{{ news.headline }}</h2>-->
 {{ news.body|markdown }}
 
 {% endblock %}
