--- a/nablaweb/templates/news/news_list.html
+++ b/nablaweb/templates/news/news_list.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load markup %}
 
 {% block title %}Nyheter{% endblock %}
 
@@ -6,10 +7,11 @@
 {% for news in news_list %}
     <div class="row">
         <div class="span8">
-            <h2>{{ news.headline }}</h2>
-            <p>{{ news.lead_paragraph }}</p>
+            <!--<h2>{{ news.headline }}</h2>-->
+            {{ news.lead_paragraph|markdown }}
             <p><a class="btn" href="{% url news_detail news.id %}">Les mer &raquo;</a></p>
         </div>
     </div>
+    <hr>
 {% endfor %}
 {% endblock content %}
