--- a/static/css/default.css
+++ b/static/css/default.css
@@ -20,6 +20,15 @@ h3 { margin-bottom: 5px; }
 .brand img { height: 18px; margin-bottom: -1px; margin-right: -3px;}
 .brand { font-family:Helvetica; }
 
+/* Some floats for articles */
+img[alt=right] {
+    float: right;
+}
+
+img[alt=left] {
+    float: left;
+}
+
 /* FOOTER */
 	footer { 
 		border-top:6px solid #111;
