Laget halvferdig kalender. Småfiksing.

--- a/nablaweb/templates/bedpres/bedpres_list.html
+++ b/nablaweb/templates/bedpres/bedpres_list.html
@@ -1,3 +1,5 @@
 {% extends "events/event_list.html" %}
 
 {% block title %} Bedriftspresentasjoner {% endblock %}
+
+{% block content %} Denne siden er ikke i bruk. Lenk heller til event list. {% endblock %}
