--- a/nablaweb/templates/quotes/quote_list.html
+++ b/nablaweb/templates/quotes/quote_list.html
@@ -4,7 +4,7 @@
 {% block title %}Sitater{% endblock %}
 
 {% block content %}
-{% for quote in content_list %}
+{% for quote in quote_list %}
     <div class="row">
         <div class="span8">
             {{ quote.quote }}
