Forsøk på å fikse jobs

--- a/nablaweb/templates/base_site.html
+++ b/nablaweb/templates/base_site.html
@@ -73,6 +73,7 @@
                         <li><a href="{% url bedpres_list %}">bedpres_list</a></li>
                         <li><a href="{% url jobs_list %}">jobs_list</a></li>
                         <li><a href="{% url news_list %}">news_list</a></li>
+                        <li><a href="{% url quote_list %}">quote_list</a></li>
                         <li><a href="{% url gallery.views.index %}">galleri: gallery.views.index</a></li>
                         <li><a href="{% url accounts.views.list %}">accounts.views.list</a></li>
                         <li><a href="{% url accounts.views.user_register %}">accounts.views.user_register</a></li>
