--- a/nablaweb/templates/jobs/jobs_detail.html
+++ b/nablaweb/templates/jobs/jobs_detail.html
@@ -1,1 +1,60 @@
-{% extends "jobs/jobs_base.html" %}
+{% extends "base.html" %}
+{% load markup %}
+{% load humanize %}
+
+{% block content %}
+
+<!--<h2>{{ job.headline }}</h2>-->
+{{ job.body|markdown }}
+
+{% endblock %}
+
+
+
+
+
+{% block sidebar %}
+
+<table class="table">
+
+    <!-- Publisert -->
+    <tr>
+        <td>Publisert</td>
+        <td>
+            <time datetime="{{ job.created_date|date:"c" }}">
+                {{ job.created_date|naturalday }} kl. {{ job.created_date|date:"G:i" }}
+            </time>
+        </td>
+    </tr>
+    
+    <!-- Av -->
+    {% if job.created_by %}
+    <tr><td>Av</td><td>{{ job.created_by.username }}</td></tr>
+    {% endif %}
+
+    <!-- Sist endret -->
+    <tr>
+        <td>Sist endret</td>
+        <td>
+            <time datetime="{{ job.last_changed_date|date:"c" }}">
+                {{ job.last_changed_date|naturalday }} kl. {{ job.last_changed_date|date:"G:i" }}
+            </time>
+        </td>
+    </tr>
+
+    <!-- Av -->
+    {% if job.last_changed_by %}
+    <tr><td>Av</td><td>{{ job.last_changed_by.username }}</td></tr>
+    {% endif %}
+
+</table>
+
+<div class="well" style="padding: 8px 0;">
+    <ul class="nav list">
+        <li class="nav-header">Admin</li>
+        <li><a href="#endre"><i class="icon pencil"></i> Endre</a></li>
+        <li><a href="#slett"><i class="icon trash"></i> Slett</a></li>
+    </ul>
+</div>
+
+{% endblock %}
