--- a/nablaweb/templates/jobs/jobs_list.html
+++ b/nablaweb/templates/jobs/jobs_list.html
@@ -7,7 +7,7 @@
 {% for job in jobs_list %}
     <div class="row">
         <div class="span8">
-            <h2>{{ job.headline }} i {{ job.company.headline }}</h2>
+            <h2>{{ job.headline }} i {{ job.company.name }}</h2>
             {{ job.lead_paragraph|markdown }}
             <p><a class="btn" href="{% url jobs_detail job.id %}">Les mer &raquo;</a></p>
         </div>
