--- a/nablaweb/templates/events/event_detail.html
+++ b/nablaweb/templates/events/event_detail.html
@@ -35,67 +35,6 @@
 
 {% block sidebar %}
 
-<h3>Informasjon</h3>
-<table class="table table-bordered table-condensed table-striped content-info">
-
-    <!-- Fra -->
-    <tr>
-        <td>Starter</td>
-        <td>
-            <time datetime="{{ event.event_start|date:"c" }}">
-                <b>{{ event.event_start|naturalday }} kl. {{ event.event_start|date:"G:i" }}</b>
-            </time>
-        </td>
-    </tr>
-
-    <!-- Til -->
-    {% if event.event_end %}
-    <tr>
-        <td>Slutter</td>
-        <td>
-            <time datetime="{{ event.event_end|date:"c" }}">
-                {{ event.event_end|naturalday }} kl. {{ event.event_end|date:"G:i" }}
-            </time>
-        </td>
-    </tr>
-    {% endif %}
-
-    <!-- Sted -->
-    <tr><td>Sted</td><td>{{ event.location }}</td></tr>
-
-    <!-- Registrering åpner -->
-    {% if event.registration_start %}
-    <tr>
-        <td>Registrering åpner</td>
-        <td>
-            <time datetime="{{ event.registration_start|date:"c" }}">
-                {{ event.registration_start|naturalday }} kl. {{ event.registration_start|date:"G:i" }}
-            </time>
-        </td>
-    </tr>
-    {% endif %}
-
-    <tr>
-        <td style="text-align: center;" colspan="2">
-            {% if event.registration_required %}
-                Påmelding kreves
-            {% else %}
-                Påmelding unødvendig
-            {% endif %}
-        </td>
-    </tr>
-
-
-</table>
-
-{% if event.registration_required %}
-<h3>{{ event.users_registered }} påmeldte</h3>
-<div class="progress">
-    <div class="bar" style="width: {{ event.percent_full }}%;"></div>
-</div>
-{% endif %}
-
-
 <h3>Meta</h3>
 <table class="table table-condensed content-info">
 
@@ -149,6 +88,78 @@
     {% endif %}
 
 </table>
+<!-- end meta -->
+
+<!-- event-info -->
+<h3>Informasjon</h3>
+<table class="table table-bordered table-striped content-info">
+
+    <!-- Fra -->
+    <tr>
+        <td>Starter</td>
+        <td>
+            <time datetime="{{ event.event_start|date:"c" }}">
+                <b>{{ event.event_start|naturalday }} kl. {{ event.event_start|date:"G:i" }}</b>
+            </time>
+        </td>
+    </tr>
+
+    <!-- Til -->
+    {% if event.event_end %}
+    <tr>
+        <td>Slutter</td>
+        <td>
+            <time datetime="{{ event.event_end|date:"c" }}">
+                {{ event.event_end|naturalday }} kl. {{ event.event_end|date:"G:i" }}
+            </time>
+        </td>
+    </tr>
+    {% endif %}
+
+    <!-- Sted -->
+    <tr><td>Sted</td><td>{{ event.location }}</td></tr>
+
+    <!-- Registrering åpner -->
+    {% if event.registration_start %}
+    <tr>
+        <td>Registrering åpner</td>
+        <td>
+            <time datetime="{{ event.registration_start|date:"c" }}">
+                {{ event.registration_start|naturalday }} kl. {{ event.registration_start|date:"G:i" }}
+            </time>
+        </td>
+    </tr>
+    {% endif %}
+
+    <tr>
+        <td style="text-align: center;" colspan="2">
+            {% if event.registration_required %}
+                Påmelding kreves
+            {% else %}
+                Påmelding unødvendig
+            {% endif %}
+        </td>
+
+
+    </tr>
+
+    <tr><td colspan="2" style="text-align: center;">
+        <a href="{% url event_detail event.id %}" class="btn primary">Meld deg på</a>
+        <a href="#notimplemented" class="btn"><span class="icon custom facebook"></span> Vis på Facebook</a>
+    </td></tr>
+
+</table>
+
+{% if event.registration_required %}
+<h3>{{ event.users_registered }} påmeldte</h3>
+<div class="progress{% if event.percent_full > 90 %} danger{% endif %}">
+    <div class="bar" style="width: {{ event.percent_full }}%;"></div>
+</div>
+
+
+{% endif %}
+
+
 
 <div class="well" style="padding: 8px 0;">
     <ul class="nav list">
