--- a/nablaweb/templates/news/news_list.html
+++ b/nablaweb/templates/news/news_list.html
@@ -7,6 +7,7 @@
 {% for news in news_list %}
     <div class="row">
         <div class="span8">
+            <img alt="" src="{{ news.picture.url }}">
             <h2>{{ news.headline }}</h2>
             {{ news.lead_paragraph|markdown }}
             <p><a class="btn" href="{% url news_detail news.id %}">Les mer &raquo;</a></p>
